--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@popperjs/core": "^2.11.0",
+    "animejs": "^3.2.1",
     "bootstrap": "^5.1.3",
     "url-change-event": "^0.1.2"
   },
